--- a/src/app/pages/activities/activities.component.css
+++ b/src/app/pages/activities/activities.component.css
@@ -24,8 +24,8 @@
 }
 
 .page-title {
-  font-size: 1.5rem;
-  font-weight: 600;
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-bold);
   color: var(--color-black);
   margin: 0;
   letter-spacing: -0.02em;
@@ -38,8 +38,8 @@
 
 /* ===== SECTION STYLES ===== */
 .section-title {
-  font-size: 1.125rem;
-  font-weight: 600;
+  font-size: var(--font-size-h2);
+  font-weight: var(--font-weight-semibold);
   color: var(--color-black);
   margin: 0 0 1.5rem 0;
 }
